// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test searchSimilarity for peptide should find one result with bad distribution 1`] = `
Object {
  "peptidic": Array [
    Object {
      "atoms": Object {
        "C": 188,
        "H": 318,
        "N": 47,
        "O": 59,
        "S": 1,
      },
      "charge": 1,
      "comment": "c38",
      "em": 4210.304872186381,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C188H318N47O59S(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1404.106292170371,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1404.1062921703713,
              1404.4405985005578,
              1404.7748258558447,
            ],
            Array [
              0.012936511047156596,
              0.0848161655293925,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1404.096191,
              1404.107442,
              1404.118693,
              1404.433774,
              1404.445029,
              1404.456284,
              1404.76022,
              1404.771479,
              1404.782738,
            ],
            Array [
              0.05451672202406117,
              0.057740875254479324,
              0.041260286976979546,
              0.1298286305316318,
              0.12884347334140356,
              0.0904379063746177,
              0.1376689819704614,
              0.19073205577490218,
              0.16897106775146334,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1403.9396255037043,
            "max": 0.00009697908619110793,
            "min": 0.000020979089806134605,
            "sum": 0.000508457195604081,
            "to": 1404.9396255037043,
          },
          "quantity": 0.0009568951672014866,
          "theoretical": Array [
            Array [
              1404.1062921703713,
              1404.4405985005578,
              1404.7748258558447,
            ],
            Array [
              0.16645439530267664,
              0.37818543688018513,
              0.4553601678171381,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2419608352660369,
            "min": 0.08844744746605153,
            "sum": 0.5313614417043229,
          },
          "value": 0.9022473234234509,
        },
      },
      "mw": 4212.888237254821,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProNH3(+1)",
      ],
      "unsaturation": 53,
    },
    Object {
      "atoms": Object {
        "C": 105,
        "H": 178,
        "N": 25,
        "O": 33,
        "S": 1,
      },
      "charge": 1,
      "comment": "c21",
      "em": 2349.2739594678997,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C105H178N25O33S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1175.1403436701557,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1175.1403436701557,
              1175.6418089768501,
              1176.1429649615511,
            ],
            Array [
              0.07825620606328992,
              0,
              0.025900972442961807,
            ],
          ],
          "experimental": Array [
            Array [
              1175.130407,
              1175.139021,
              1175.147635,
              1175.15625,
              1175.63019,
              1175.638809,
              1175.647429,
              1175.656049,
              1176.130292,
              1176.138917,
              1176.147542,
              1176.156168,
            ],
            Array [
              0.06678793635096793,
              0.0803713478262402,
              0.06246890448353633,
              0.03503577268843891,
              0.1290584568973072,
              0.1626504545203764,
              0.12994180790394289,
              0.07322964300173321,
              0.06013058444574518,
              0.08315430047350664,
              0.07278387874895345,
              0.04438691265925148,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1174.8903436701557,
            "max": 0.0001079319317315659,
            "min": 0.000023249111950667904,
            "sum": 0.0006635821095602563,
            "to": 1176.3903436701557,
          },
          "quantity": 0.0008241015676242541,
          "theoretical": Array [
            Array [
              1175.1403436701557,
              1175.6418089768501,
              1176.1429649615511,
            ],
            Array [
              0.31466833014887163,
              0.3989750210807099,
              0.28635664877041855,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3212622042618152,
            "min": 0.23057976897857219,
            "sum": 0.8052188414994181,
          },
          "value": 0.8958428214937483,
        },
      },
      "mw": 2350.753453573904,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspNH3(+1)",
      ],
      "unsaturation": 29,
    },
    Object {
      "atoms": Object {
        "C": 120,
        "H": 203,
        "N": 28,
        "O": 39,
        "S": 1,
      },
      "charge": 1,
      "comment": "c24",
      "em": 2692.44829500436,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C120H203N28O39S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1346.7275114383858,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1346.7275114383858,
              1347.2289825424393,
              1347.7302017573809,
            ],
            Array [
              0.08075077941136546,
              0,
              0.057471743721324284,
            ],
          ],
          "experimental": Array [
            Array [
              1346.715625,
              1346.726194,
              1346.736762,
              1347.212467,
              1347.223041,
              1347.233615,
              1347.244189,
              1347.720163,
              1347.730743,
              1347.741323,
            ],
            Array [
              0.06246748537595812,
              0.07378937037213538,
              0.06001709631406756,
              0.11151278616700364,
              0.15892055484527245,
              0.15908782449593042,
              0.10935643486632994,
              0.08110242332156946,
              0.10160063657682365,
              0.08214538766490932,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1346.4775114383858,
            "max": 0.00010529077677230787,
            "min": 0.00003972174935793556,
            "sum": 0.0006618405720608825,
            "to": 1347.9775114383858,
          },
          "quantity": 0.000874831405025836,
          "theoretical": Array [
            Array [
              1346.7275114383858,
              1347.2289825424393,
              1347.7302017573809,
            ],
            Array [
              0.2770247314735265,
              0.4006550772418468,
              0.32232019128462674,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3031095865985856,
            "min": 0.2095789036609134,
            "sum": 0.756534994352811,
          },
          "value": 0.8617774768673103,
        },
      },
      "mw": 2694.1295500565748,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluNH3(+1)",
      ],
      "unsaturation": 33,
    },
    Object {
      "atoms": Object {
        "C": 144,
        "H": 247,
        "N": 36,
        "O": 45,
        "S": 1,
      },
      "charge": 1,
      "comment": "c29",
      "em": 3232.78667617534,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C144H247N36O45S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1616.8967020238758,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1616.8967020238758,
              1617.3981599990937,
              1617.8994357307695,
            ],
            Array [
              0.032877418071534784,
              0.02880981786447187,
              0.07654080823873538,
            ],
          ],
          "experimental": Array [
            Array [
              1616.879412,
              1616.893315,
              1616.907218,
              1617.393938,
              1617.407848,
              1617.894794,
              1617.90871,
            ],
            Array [
              0.1458828187381204,
              0.11863858408908835,
              0.06867279913371807,
              0.1942451743107386,
              0.1739462826990376,
              0.15659403641275638,
              0.14202030461654058,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1616.6467020238758,
            "max": 0.00008632527966473585,
            "min": 0.00003051915504008848,
            "sum": 0.0004444140245494041,
            "to": 1618.1467020238758,
          },
          "quantity": 0.0006567678207203379,
          "theoretical": Array [
            Array [
              1616.8967020238758,
              1617.3981599990937,
              1617.8994357307695,
            ],
            Array [
              0.22784357585771964,
              0.3970012748742481,
              0.37515514926803234,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.26863821391949216,
            "min": 0.1541745458898989,
            "sum": 0.6766683910639444,
          },
          "value": 0.8617719558252579,
        },
      },
      "mw": 3234.786659994151,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysNH3(+1)",
      ],
      "unsaturation": 39,
    },
    Object {
      "atoms": Object {
        "C": 135,
        "H": 230,
        "N": 33,
        "O": 43,
        "S": 1,
      },
      "charge": 1,
      "comment": "c27",
      "em": 3033.6545993749996,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C135H230N33O43S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1517.3306636237057,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1517.330663623706,
              1517.8321259422867,
              1518.3333836980014,
            ],
            Array [
              0.14059005268217267,
              0,
              0.0246713196947122,
            ],
          ],
          "experimental": Array [
            Array [
              1517.316868,
              1517.329507,
              1517.342145,
              1517.82254,
              1517.835185,
              1517.84783,
              1518.328464,
              1518.341116,
            ],
            Array [
              0.033512904417647635,
              0.039720233358160495,
              0.030848179968897153,
              0.18904066641846748,
              0.21481839877395537,
              0.16056176625576402,
              0.17436961169814943,
              0.15712823910895837,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1517.0806636237057,
            "max": 0.00007624732562848528,
            "min": 0.0000109492075006556,
            "sum": 0.0003549385251154266,
            "to": 1518.5806636237057,
          },
          "quantity": 0.0005022988873964215,
          "theoretical": Array [
            Array [
              1517.330663623706,
              1517.8321259422867,
              1518.3333836980014,
            ],
            Array [
              0.24467137042687795,
              0.39915945907130207,
              0.35616917050182,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.28205730341748864,
            "min": 0.17289167373518044,
            "sum": 0.706628133212057,
          },
          "value": 0.8347386276231151,
        },
      },
      "mw": 3035.536124621611,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysNH3(+1)",
      ],
      "unsaturation": 37,
    },
    Object {
      "atoms": Object {
        "C": 170,
        "H": 290,
        "N": 43,
        "O": 55,
        "S": 1,
      },
      "charge": 1,
      "comment": "c34",
      "em": 3846.09381678794,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C170H290N43O55S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1923.5502723301759,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1923.5502723301759,
              1924.051728993207,
              1924.5530459785252,
            ],
            Array [
              0.1878612790756839,
              0,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1924.037116,
              1924.055163,
              1924.542533,
              1924.560587,
            ],
            Array [
              0.24376110137729898,
              0.2925918793371093,
              0.22794688252867967,
              0.2357001367569121,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1923.3002723301759,
            "max": 0.00006517793388071849,
            "min": 0.00005077757753027928,
            "sum": 0.00022276057021262653,
            "to": 1924.8002723301759,
          },
          "quantity": 0.00037925787111224243,
          "theoretical": Array [
            Array [
              1923.5502723301759,
              1924.051728993207,
              1924.5530459785252,
            ],
            Array [
              0.1878612790756839,
              0.38661211346827024,
              0.4255266074560459,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.24993693457056756,
            "min": 0.11034203594785157,
            "sum": 0.5873591220647334,
          },
          "value": 0.812138720924316,
        },
      },
      "mw": 3848.448217456969,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluNH3(+1)",
      ],
      "unsaturation": 47,
    },
    Object {
      "atoms": Object {
        "C": 170,
        "H": 290,
        "N": 43,
        "O": 55,
        "S": 1,
      },
      "charge": 1,
      "comment": "c34",
      "em": 3846.09381678794,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C170H290N43O55S(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1282.7026070375575,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1282.7026070375575,
              1283.0369114795783,
              1283.3711228031236,
            ],
            Array [
              0.1878612790756839,
              0,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1283.026992,
              1283.036819,
              1283.046647,
              1283.361189,
              1283.371021,
              1283.380852,
            ],
            Array [
              0.14622347340263128,
              0.1488677122468235,
              0.1031907112225888,
              0.19690644651706687,
              0.22644722317066823,
              0.1783644334402213,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1282.5359403708908,
            "max": 0.0000522835157638865,
            "min": 0.000023825300665429927,
            "sum": 0.00023088609801358252,
            "to": 1283.5359403708908,
          },
          "quantity": 0.0003930918740173007,
          "theoretical": Array [
            Array [
              1282.7026070375575,
              1283.0369114795783,
              1283.3711228031236,
            ],
            Array [
              0.1878612790756839,
              0.38661211346827024,
              0.4255266074560459,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.24993693457056756,
            "min": 0.11034203594785157,
            "sum": 0.5873591220647334,
          },
          "value": 0.812138720924316,
        },
      },
      "mw": 3848.448217456969,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluNH3(+1)",
      ],
      "unsaturation": 47,
    },
    Object {
      "atoms": Object {
        "C": 101,
        "H": 166,
        "N": 27,
        "O": 37,
      },
      "charge": 1,
      "comment": "z21",
      "em": 2349.19379439388,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C101H166N27O37(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1175.100261133146,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1175.100261133146,
              1175.6017116893224,
              1176.1030879955426,
            ],
            Array [
              0.08175372926898097,
              0,
              0.11365604113091032,
            ],
          ],
          "experimental": Array [
            Array [
              1175.087337,
              1175.095951,
              1175.104565,
              1175.113179,
              1175.587092,
              1175.595712,
              1175.604331,
              1175.612951,
              1176.087167,
              1176.095792,
              1176.104416,
              1176.113041,
            ],
            Array [
              0,
              0,
              0.022212083519198247,
              0.3006326768113113,
              0,
              0,
              0.0371498812246421,
              0.484467594576728,
              0,
              0,
              0.0014117917449032321,
              0.15412597212321716,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1174.850261133146,
            "max": 0.00001497804283302255,
            "min": 0,
            "sum": 0.000030916500919135036,
            "to": 1176.350261133146,
          },
          "quantity": 0.00003705386260625378,
          "theoretical": Array [
            Array [
              1175.100261133146,
              1175.6017116893224,
              1176.1030879955426,
            ],
            Array [
              0.3285682848521146,
              0.4022379101488546,
              0.26919380499903073,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.33561382927806194,
            "min": 0.2246062875580845,
            "sum": 0.834366480160616,
          },
          "value": 0.8045902296001087,
        },
      },
      "mw": 2350.561459652332,
      "parts": Array [
        "N-1H-1(+1)AspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 32,
    },
    Object {
      "atoms": Object {
        "C": 138,
        "H": 235,
        "N": 34,
        "O": 44,
        "S": 1,
      },
      "charge": 1,
      "comment": "c28",
      "em": 3104.69171316015,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C138H235N34O44S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1552.8492205162809,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1552.8492205162809,
              1553.3506812950518,
              1553.8519451463785,
            ],
            Array [
              0,
              0,
              0.2251223368239789,
            ],
          ],
          "experimental": Array [
            Array [
              1552.836482,
              1552.849567,
              1552.862653,
              1553.333832,
              1553.346924,
              1553.360015,
              1553.844519,
              1553.857617,
            ],
            Array [
              0.1142079556535767,
              0.13057563081221268,
              0.10088138624230102,
              0.14651882270407857,
              0.19453421213046515,
              0.175698126580382,
              0.06427837811166624,
              0.07330548776531745,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1552.5992205162809,
            "max": 0.00010253733743400238,
            "min": 0.000033880589300796496,
            "sum": 0.0005270915398944598,
            "to": 1554.0992205162809,
          },
          "quantity": 0.0007569999621440972,
          "theoretical": Array [
            Array [
              1552.8492205162809,
              1553.3506812950518,
              1553.8519451463785,
            ],
            Array [
              0.2388239342783347,
              0.3984698630207027,
              0.3627062027009626,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.27745060000562694,
            "min": 0.1662907286360718,
            "sum": 0.6962900478905524,
          },
          "value": 0.7748776631760211,
        },
      },
      "mw": 3106.6141442178605,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaNH3(+1)",
      ],
      "unsaturation": 38,
    },
    Object {
      "atoms": Object {
        "C": 188,
        "H": 318,
        "N": 47,
        "O": 59,
        "S": 1,
      },
      "charge": 1,
      "comment": "c38",
      "em": 4210.304872186381,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C188H318N47O59S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2105.6558000293962,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2105.6558000293962,
              2106.157259524676,
              2106.6586005576064,
            ],
            Array [
              0,
              0.10430374819443727,
              0.13443670629117252,
            ],
          ],
          "experimental": Array [
            Array [
              2105.657033,
              2106.153003,
              2106.173672,
              2106.649148,
              2106.669825,
            ],
            Array [
              0.24867763152690375,
              0.24090974925308364,
              0.1894891576940471,
              0.1724129783797999,
              0.1485104831461657,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2105.4058000293962,
            "max": 0.0005041343381913086,
            "min": 0.00030106943546011626,
            "sum": 0.0020272604942224875,
            "to": 2106.9058000293962,
          },
          "quantity": 0.003815219425256228,
          "theoretical": Array [
            Array [
              2105.6558000293962,
              2106.157259524676,
              2106.6586005576064,
            ],
            Array [
              0.16645439530267664,
              0.37818543688018513,
              0.4553601678171381,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2419608352660369,
            "min": 0.08844744746605153,
            "sum": 0.5313614417043229,
          },
          "value": 0.7612595455143902,
        },
      },
      "mw": 4212.888237254821,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProNH3(+1)",
      ],
      "unsaturation": 53,
    },
    Object {
      "atoms": Object {
        "C": 88,
        "H": 154,
        "N": 21,
        "O": 24,
        "S": 1,
      },
      "charge": 1,
      "comment": "c17",
      "em": 1921.1196311005301,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C88H154N21O24S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 961.063179486471,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              961.063179486471,
              961.5646422103973,
              962.0656984762834,
            ],
            Array [
              0,
              0.005231208936801906,
              0.24068251942651026,
            ],
          ],
          "experimental": Array [
            Array [
              961.046622,
              961.052993,
              961.059364,
              961.065735,
              961.072106,
              961.078477,
              961.550123,
              961.556499,
              961.562875,
              961.569251,
              961.575627,
              961.582003,
            ],
            Array [
              0.0363905342020131,
              0.08208805116750609,
              0.14058100953303665,
              0.15177149306262566,
              0.11504763781992135,
              0.0697636239835444,
              0.04277178302015477,
              0.08633426652250269,
              0.10730657620459336,
              0.0894978304507046,
              0.05973958066813578,
              0.018707613365261607,
            ],
          ],
          "experimentalInfo": Object {
            "from": 960.813179486471,
            "max": 0.00002557555797064359,
            "min": 0.0000031524869424471463,
            "sum": 0.0001685135821922126,
            "to": 962.313179486471,
          },
          "quantity": 0.00019600710468441914,
          "theoretical": Array [
            Array [
              961.063179486471,
              961.5646422103973,
              962.0656984762834,
            ],
            Array [
              0.3680195393595564,
              0.39129794121393324,
              0.24068251942651026,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3364113657235165,
            "min": 0.20692246633053843,
            "sum": 0.8597320105489419,
          },
          "value": 0.7540862716366878,
        },
      },
      "mw": 1922.3589080674192,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValNH3(+1)",
      ],
      "unsaturation": 22,
    },
    Object {
      "atoms": Object {
        "C": 150,
        "H": 258,
        "N": 37,
        "O": 46,
        "S": 1,
      },
      "charge": 1,
      "comment": "c30",
      "em": 3345.87074015387,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C150H258N37O46S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1673.438734013141,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1673.438734013141,
              1673.9401952277096,
              1674.4414857377078,
            ],
            Array [
              0.21807215273549552,
              0,
              0.04475839940265724,
            ],
          ],
          "experimental": Array [
            Array [
              1673.929457,
              1673.944102,
              1674.4275,
              1674.442152,
              1674.456804,
            ],
            Array [
              0.2674212577290048,
              0.29428172085533816,
              0.12249746439432962,
              0.16768627123545377,
              0.14811328578587366,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1673.188734013141,
            "max": 0.00005729244283818824,
            "min": 0.0000238485046106044,
            "sum": 0.00019468570005526042,
            "to": 1674.688734013141,
          },
          "quantity": 0.00029589885293987856,
          "theoretical": Array [
            Array [
              1673.438734013141,
              1673.9401952277096,
              1674.4414857377078,
            ],
            Array [
              0.21807215273549552,
              0.3952825627121815,
              0.3866452845523231,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.26007489274348256,
            "min": 0.14347987258502093,
            "sum": 0.6579467886440815,
          },
          "value": 0.7371694478618472,
        },
      },
      "mw": 3347.94453180494,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleNH3(+1)",
      ],
      "unsaturation": 40,
    },
    Object {
      "atoms": Object {
        "C": 101,
        "H": 173,
        "N": 24,
        "O": 30,
        "S": 1,
      },
      "charge": 1,
      "comment": "c20",
      "em": 2234.24701644361,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C101H173N24O30S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1117.6268721580109,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1117.6268721580109,
              1118.128337379121,
              1118.6294749272945,
            ],
            Array [
              0,
              0.15604062176873093,
              0.10784762855580274,
            ],
          ],
          "experimental": Array [
            Array [
              1117.609813,
              1117.617802,
              1117.625792,
              1117.633782,
              1117.641772,
              1118.113323,
              1118.121318,
              1118.129313,
              1118.137308,
              1118.145303,
              1118.617174,
              1118.625174,
              1118.633175,
              1118.641175,
            ],
            Array [
              0.06960021876907144,
              0.13228678456858106,
              0.16802061173947533,
              0.1317170198899519,
              0.073673652036602,
              0.037331836173840345,
              0.06488280759502597,
              0.07346639742756599,
              0.051771043686585284,
              0.029665931517027906,
              0.029634563720734655,
              0.0445910116823374,
              0.051184773019135606,
              0.042173348174064984,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1117.3768721580109,
            "max": 0.000021667405995111856,
            "min": 0.000003821579489430655,
            "sum": 0.00012895683315751935,
            "to": 1118.8768721580109,
          },
          "quantity": 0.00015734463750359274,
          "theoretical": Array [
            Array [
              1117.6268721580109,
              1118.128337379121,
              1118.6294749272945,
            ],
            Array [
              0.3264869477851228,
              0.39808172706280187,
              0.27543132515207536,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.32626061920110067,
            "min": 0.22573855714135554,
            "sum": 0.8195820029429017,
          },
          "value": 0.7361117496754663,
        },
      },
      "mw": 2235.665888232284,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerNH3(+1)",
      ],
      "unsaturation": 27,
    },
    Object {
      "atoms": Object {
        "C": 134,
        "H": 219,
        "N": 34,
        "O": 50,
      },
      "charge": 1,
      "comment": "z28",
      "em": 3104.56392918749,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C134H219N34O50(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1552.785328529951,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1552.785328529951,
              1553.2867911456963,
              1553.788193528928,
            ],
            Array [
              0.025843077906325118,
              0,
              0.322929465783485,
            ],
          ],
          "experimental": Array [
            Array [
              1552.771059,
              1552.784144,
              1552.797228,
              1553.281469,
              1553.294559,
              1553.779033,
              1553.79213,
              1553.805227,
            ],
            Array [
              0,
              0,
              0.24694708738509755,
              0,
              0.5277410670073108,
              0,
              0,
              0.22531184560759174,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1552.535328529951,
            "max": 0.0000021633501070194715,
            "min": 0,
            "sum": 0.0000040992642836899075,
            "to": 1554.035328529951,
          },
          "quantity": 0.000005649819097061573,
          "theoretical": Array [
            Array [
              1552.785328529951,
              1553.2867911456963,
              1553.788193528928,
            ],
            Array [
              0.24869449057916188,
              0.4023264826551608,
              0.3489790267656774,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2919106881826793,
            "min": 0.18044196199340787,
            "sum": 0.7255567325725354,
          },
          "value": 0.6512274563101899,
        },
      },
      "mw": 3106.37579070581,
      "parts": Array [
        "N-1H-1(+1)ThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 42,
    },
    Object {
      "atoms": Object {
        "C": 178,
        "H": 304,
        "N": 45,
        "O": 57,
        "S": 1,
      },
      "charge": 1,
      "comment": "c36",
      "em": 4016.19934448716,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C178H304N45O57S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2008.603036179786,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2008.603036179786,
              2009.104493228034,
              2009.605820840731,
            ],
            Array [
              0.17776125613715738,
              0,
              0.17180950456240646,
            ],
          ],
          "experimental": Array [
            Array [
              2009.087384,
              2009.106641,
              2009.607419,
            ],
            Array [
              0.3171995642392097,
              0.4152992321908837,
              0.2675012035699066,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2008.353036179786,
            "max": 0.0000061934689855418,
            "min": 0.000003989317290969188,
            "sum": 0.000014913268567506283,
            "to": 2009.853036179786,
          },
          "quantity": 0.000026547572169220333,
          "theoretical": Array [
            Array [
              2008.603036179786,
              2009.104493228034,
              2009.605820840731,
            ],
            Array [
              0.17776125613715738,
              0.3829280357305295,
              0.43931070813231304,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2467856018319645,
            "min": 0.09985852328689832,
            "sum": 0.5617563998864257,
          },
          "value": 0.6504292393004362,
        },
      },
      "mw": 4018.65749145916,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleNH3(+1)",
      ],
      "unsaturation": 49,
    },
    Object {
      "atoms": Object {
        "C": 165,
        "H": 283,
        "N": 42,
        "O": 52,
        "S": 1,
      },
      "charge": 1,
      "comment": "c33",
      "em": 3717.05122369919,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C165H283N42O52S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1859.0289757858009,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1859.0289757858009,
              1859.5304307978233,
              1860.03174038331,
            ],
            Array [
              0,
              0.12901753885011474,
              0.25077309717763613,
            ],
          ],
          "experimental": Array [
            Array [
              1859.013183,
              1859.030323,
              1859.527488,
              1859.544635,
              1860.024853,
              1860.042007,
            ],
            Array [
              0.34192353980124673,
              0.2325524532298852,
              0.15624798858932462,
              0.103771521043066,
              0.08239312351285263,
              0.08311137382362471,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1858.7789757858009,
            "max": 0.0001683739015802551,
            "min": 0.00004057296457946961,
            "sum": 0.0004924314414799504,
            "to": 1860.2789757858009,
          },
          "quantity": 0.0008137198530557415,
          "theoretical": Array [
            Array [
              1859.0289757858009,
              1859.5304307978233,
              1860.03174038331,
            ],
            Array [
              0.19468535700338113,
              0.38903704848250537,
              0.41627759451411345,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.25191492520749525,
            "min": 0.11781596654450371,
            "sum": 0.6051609035108767,
          },
          "value": 0.6202093639722491,
        },
      },
      "mw": 3719.334034710502,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysNH3(+1)",
      ],
      "unsaturation": 45,
    },
    Object {
      "atoms": Object {
        "C": 192,
        "H": 323,
        "N": 48,
        "O": 62,
        "S": 1,
      },
      "charge": 1,
      "comment": "c39",
      "em": 4325.33181521067,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C192H323N48O62S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2163.169271541541,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2163.169271541541,
              2163.6707312035787,
              2164.1720755241245,
            ],
            Array [
              0,
              0.37587982216593047,
              0.023306339908043178,
            ],
          ],
          "experimental": Array [
            Array [
              2163.152943,
              2163.174457,
              2164.164445,
              2164.185974,
            ],
            Array [
              0.1915118611541569,
              0.22433717759143962,
              0.24124220668322685,
              0.3429087545711764,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2162.919271541541,
            "max": 0.00004284463070823671,
            "min": 0.000023928391614434032,
            "sum": 0.00012494469778648825,
            "to": 2164.419271541541,
          },
          "quantity": 0.00024163785417107236,
          "theoretical": Array [
            Array [
              2163.169271541541,
              2163.6707312035787,
              2164.1720755241245,
            ],
            Array [
              0.16197245706039343,
              0.37587982216593047,
              0.46214772077367594,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.23896465850876597,
            "min": 0.08375177708215446,
            "sum": 0.517074190279935,
          },
          "value": 0.6008138379260264,
        },
      },
      "mw": 4327.975802596442,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspNH3(+1)",
      ],
      "unsaturation": 55,
    },
    Object {
      "atoms": Object {
        "C": 43,
        "H": 68,
        "N": 11,
        "O": 16,
      },
      "charge": 1,
      "comment": "z9",
      "em": 994.4845501534899,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C43H68N11O16(+1)",
      "ms": Object {
        "charge": 3,
        "em": 332.1661848260742,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              332.16618482607424,
              332.500491421847,
              332.83468945276445,
            ],
            Array [
              0,
              0.30825650923584536,
              0.09800429441440131,
            ],
          ],
          "experimental": Array [
            Array [
              332.148736,
              332.15003,
              332.151324,
              332.152619,
              332.153913,
              332.155208,
              332.156502,
              332.157797,
              332.159091,
              332.160386,
              332.16168,
              332.162975,
            ],
            Array [
              0,
              0,
              0.1268567095199702,
              0.20877353738507232,
              0.2534428573047885,
              0.2359122426569841,
              0.16129420048023593,
              0.013720452652948816,
              0,
              0,
              0,
              0,
            ],
          ],
          "experimentalInfo": Object {
            "from": 331.9995181594075,
            "max": 0.0000028537218940533143,
            "min": 0,
            "sum": 0.000011259823710957653,
            "to": 332.9995181594075,
          },
          "quantity": 0.000011581000862751813,
          "theoretical": Array [
            Array [
              332.16618482607424,
              332.500491421847,
              332.83468945276445,
            ],
            Array [
              0.5937391963497535,
              0.30825650923584536,
              0.09800429441440131,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.577272962882359,
            "min": 0.0952863306980827,
            "sum": 0.9722668916442991,
          },
          "value": 0.5937391963497534,
        },
      },
      "mw": 995.0658289504048,
      "parts": Array [
        "N-1H-1(+1)LysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 15,
    },
    Object {
      "atoms": Object {
        "C": 47,
        "H": 73,
        "N": 12,
        "O": 19,
      },
      "charge": 1,
      "comment": "z10",
      "em": 1109.51149317778,
      "ionization": Object {
        "charge": 3,
        "em": 3.02347509669,
        "mf": "H3(3+)",
      },
      "mf": "C47H73N12O19(+1)",
      "ms": Object {
        "charge": 4,
        "em": 278.1331934887084,
        "ionization": "H3(3+)",
        "similarity": Object {
          "difference": Array [
            Array [
              278.1331934887084,
              278.38392375924536,
              278.6345732243336,
            ],
            Array [
              0,
              0.3216644914990094,
              0.11183763895486896,
            ],
          ],
          "experimental": Array [
            Array [
              278.131188,
              278.13218,
              278.133172,
              278.134164,
              278.135156,
              278.136148,
              278.13714,
              278.138132,
              278.139124,
              278.140116,
              278.141107,
              278.142099,
              278.143091,
              278.144083,
            ],
            Array [
              0,
              0,
              0,
              0,
              0.1210371362959009,
              0.2212342167898566,
              0.2685390536587103,
              0.2344493835305427,
              0.14600194382454837,
              0.008738265900441255,
              0,
              0,
              0,
              0,
            ],
          ],
          "experimentalInfo": Object {
            "from": 278.0081934887084,
            "max": 0.0000011242265152226038,
            "min": 0,
            "sum": 0.000004186454446403902,
            "to": 278.7581934887084,
          },
          "quantity": 0.0000043386508961061445,
          "theoretical": Array [
            Array [
              278.1331934887084,
              278.38392375924536,
              278.6345732243336,
            ],
            Array [
              0.5664978695461217,
              0.3216644914990094,
              0.11183763895486896,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.5466255713194578,
            "min": 0.10791446283408715,
            "sum": 0.9649207891239104,
          },
          "value": 0.5664978695461216,
        },
      },
      "mw": 1110.1533942920253,
      "parts": Array [
        "N-1H-1(+1)AspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 17,
    },
    Object {
      "atoms": Object {
        "C": 162,
        "H": 270,
        "N": 41,
        "O": 58,
      },
      "charge": 1,
      "comment": "z34",
      "em": 3717.9438408187902,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C162H270N41O58(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1239.9859483811742,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1239.9859483811742,
              1240.3202573139126,
              1240.654533807653,
            ],
            Array [
              0.20097735619747478,
              0,
              0.2766980214279142,
            ],
          ],
          "experimental": Array [
            Array [
              1240.303989,
              1240.31333,
              1240.322671,
              1240.332012,
              1240.640322,
              1240.649666,
              1240.659011,
              1240.668355,
            ],
            Array [
              0,
              0,
              0,
              0.8706022797176701,
              0,
              0,
              0,
              0.1293977202823298,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1239.8192817145075,
            "max": 0.000008496887075660369,
            "min": 0,
            "sum": 0.000009759780411344484,
            "to": 1240.8192817145075,
          },
          "quantity": 0.00001545794065197839,
          "theoretical": Array [
            Array [
              1239.9859483811742,
              1240.3202573139126,
              1240.654533807653,
            ],
            Array [
              0.20097735619747478,
              0.3929269020922812,
              0.40609574171024404,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.25639930662864796,
            "min": 0.12689237902390801,
            "sum": 0.6313764964607609,
          },
          "value": 0.522324622374611,
        },
      },
      "mw": 3720.1235361459076,
      "parts": Array [
        "N-1H-1(+1)LeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 48,
    },
  ],
}
`;

exports[`test searchSimilarity for peptide should find one result with bad distribution and string fucntion 1`] = `
Object {
  "peptidic": Array [
    Object {
      "atoms": Object {
        "C": 188,
        "H": 318,
        "N": 47,
        "O": 59,
        "S": 1,
      },
      "charge": 1,
      "comment": "c38",
      "em": 4210.304872186381,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C188H318N47O59S(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1404.106292170371,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1404.1062921703713,
              1404.4405985005578,
              1404.7748258558447,
            ],
            Array [
              0.012936511047156603,
              0.0848161655293925,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1404.096191,
              1404.107442,
              1404.118693,
              1404.433774,
              1404.445029,
              1404.456284,
              1404.76022,
              1404.771479,
              1404.782738,
            ],
            Array [
              0.05451672202406117,
              0.05774087525447932,
              0.041260286976979546,
              0.1298286305316318,
              0.12884347334140356,
              0.0904379063746177,
              0.1376689819704614,
              0.19073205577490215,
              0.16897106775146334,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1403.9396255037043,
            "max": 0.0000969790861911078,
            "min": 0.00002097908980613458,
            "sum": 0.0005084571956040804,
            "to": 1404.9396255037043,
          },
          "quantity": 0.0009568951672014854,
          "theoretical": Array [
            Array [
              1404.1062921703713,
              1404.4405985005578,
              1404.7748258558447,
            ],
            Array [
              0.16645439530267664,
              0.37818543688018513,
              0.4553601678171381,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2419608352660369,
            "min": 0.08844744746605153,
            "sum": 0.5313614417043229,
          },
          "value": 0.9022473234234509,
        },
      },
      "mw": 4212.888237254821,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProNH3(+1)",
      ],
      "unsaturation": 53,
    },
    Object {
      "atoms": Object {
        "C": 105,
        "H": 178,
        "N": 25,
        "O": 33,
        "S": 1,
      },
      "charge": 1,
      "comment": "c21",
      "em": 2349.2739594678997,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C105H178N25O33S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1175.1403436701557,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1175.1403436701557,
              1175.6418089768501,
              1176.1429649615511,
            ],
            Array [
              0.07825620606328985,
              0,
              0.02590097244296171,
            ],
          ],
          "experimental": Array [
            Array [
              1175.130407,
              1175.139021,
              1175.147635,
              1175.15625,
              1175.63019,
              1175.638809,
              1175.647429,
              1175.656049,
              1176.130292,
              1176.138917,
              1176.147542,
              1176.156168,
            ],
            Array [
              0.06678793635096794,
              0.08037134782624024,
              0.06246890448353635,
              0.035035772688438924,
              0.12905845689730722,
              0.16265045452037646,
              0.12994180790394294,
              0.07322964300173322,
              0.06013058444574519,
              0.08315430047350666,
              0.07278387874895348,
              0.044386912659251494,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1174.8903436701557,
            "max": 0.00010793193173156576,
            "min": 0.000023249111950667873,
            "sum": 0.0006635821095602552,
            "to": 1176.3903436701557,
          },
          "quantity": 0.0008241015676242528,
          "theoretical": Array [
            Array [
              1175.1403436701557,
              1175.6418089768501,
              1176.1429649615511,
            ],
            Array [
              0.31466833014887163,
              0.3989750210807099,
              0.28635664877041855,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3212622042618152,
            "min": 0.23057976897857219,
            "sum": 0.8052188414994181,
          },
          "value": 0.8958428214937484,
        },
      },
      "mw": 2350.753453573904,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspNH3(+1)",
      ],
      "unsaturation": 29,
    },
    Object {
      "atoms": Object {
        "C": 120,
        "H": 203,
        "N": 28,
        "O": 39,
        "S": 1,
      },
      "charge": 1,
      "comment": "c24",
      "em": 2692.44829500436,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C120H203N28O39S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1346.7275114383858,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1346.7275114383858,
              1347.2289825424393,
              1347.7302017573809,
            ],
            Array [
              0.08075077941136541,
              0,
              0.057471743721324284,
            ],
          ],
          "experimental": Array [
            Array [
              1346.715625,
              1346.726194,
              1346.736762,
              1347.212467,
              1347.223041,
              1347.233615,
              1347.244189,
              1347.720163,
              1347.730743,
              1347.741323,
            ],
            Array [
              0.062467485375958136,
              0.0737893703721354,
              0.06001709631406757,
              0.11151278616700366,
              0.1589205548452725,
              0.15908782449593045,
              0.10935643486632995,
              0.08110242332156947,
              0.10160063657682367,
              0.08214538766490932,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1346.4775114383858,
            "max": 0.00010529077677230773,
            "min": 0.00003972174935793551,
            "sum": 0.0006618405720608815,
            "to": 1347.9775114383858,
          },
          "quantity": 0.0008748314050258347,
          "theoretical": Array [
            Array [
              1346.7275114383858,
              1347.2289825424393,
              1347.7302017573809,
            ],
            Array [
              0.2770247314735265,
              0.4006550772418468,
              0.32232019128462674,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3031095865985856,
            "min": 0.2095789036609134,
            "sum": 0.756534994352811,
          },
          "value": 0.8617774768673103,
        },
      },
      "mw": 2694.1295500565748,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluNH3(+1)",
      ],
      "unsaturation": 33,
    },
    Object {
      "atoms": Object {
        "C": 144,
        "H": 247,
        "N": 36,
        "O": 45,
        "S": 1,
      },
      "charge": 1,
      "comment": "c29",
      "em": 3232.78667617534,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C144H247N36O45S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1616.8967020238758,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1616.8967020238758,
              1617.3981599990937,
              1617.8994357307695,
            ],
            Array [
              0.03287741807153477,
              0.0288098178644719,
              0.07654080823873538,
            ],
          ],
          "experimental": Array [
            Array [
              1616.879412,
              1616.893315,
              1616.907218,
              1617.393938,
              1617.407848,
              1617.894794,
              1617.90871,
            ],
            Array [
              0.1458828187381204,
              0.11863858408908837,
              0.06867279913371807,
              0.1942451743107386,
              0.17394628269903759,
              0.15659403641275638,
              0.14202030461654058,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1616.6467020238758,
            "max": 0.00008632527966473574,
            "min": 0.00003051915504008844,
            "sum": 0.0004444140245494035,
            "to": 1618.1467020238758,
          },
          "quantity": 0.000656767820720337,
          "theoretical": Array [
            Array [
              1616.8967020238758,
              1617.3981599990937,
              1617.8994357307695,
            ],
            Array [
              0.22784357585771964,
              0.3970012748742481,
              0.37515514926803234,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.26863821391949216,
            "min": 0.1541745458898989,
            "sum": 0.6766683910639444,
          },
          "value": 0.8617719558252579,
        },
      },
      "mw": 3234.786659994151,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysNH3(+1)",
      ],
      "unsaturation": 39,
    },
    Object {
      "atoms": Object {
        "C": 135,
        "H": 230,
        "N": 33,
        "O": 43,
        "S": 1,
      },
      "charge": 1,
      "comment": "c27",
      "em": 3033.6545993749996,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C135H230N33O43S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1517.3306636237057,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1517.330663623706,
              1517.8321259422867,
              1518.3333836980014,
            ],
            Array [
              0.14059005268217267,
              0,
              0.024671319694712257,
            ],
          ],
          "experimental": Array [
            Array [
              1517.316868,
              1517.329507,
              1517.342145,
              1517.82254,
              1517.835185,
              1517.84783,
              1518.328464,
              1518.341116,
            ],
            Array [
              0.033512904417647635,
              0.039720233358160495,
              0.030848179968897146,
              0.18904066641846742,
              0.21481839877395537,
              0.16056176625576402,
              0.1743696116981494,
              0.15712823910895835,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1517.0806636237057,
            "max": 0.00007624732562848519,
            "min": 0.000010949207500655586,
            "sum": 0.00035493852511542614,
            "to": 1518.5806636237057,
          },
          "quantity": 0.000502298887396421,
          "theoretical": Array [
            Array [
              1517.330663623706,
              1517.8321259422867,
              1518.3333836980014,
            ],
            Array [
              0.24467137042687795,
              0.39915945907130207,
              0.35616917050182,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.28205730341748864,
            "min": 0.17289167373518044,
            "sum": 0.706628133212057,
          },
          "value": 0.834738627623115,
        },
      },
      "mw": 3035.536124621611,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysNH3(+1)",
      ],
      "unsaturation": 37,
    },
    Object {
      "atoms": Object {
        "C": 170,
        "H": 290,
        "N": 43,
        "O": 55,
        "S": 1,
      },
      "charge": 1,
      "comment": "c34",
      "em": 3846.09381678794,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C170H290N43O55S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1923.5502723301759,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1923.5502723301759,
              1924.051728993207,
              1924.5530459785252,
            ],
            Array [
              0.1878612790756839,
              0,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1924.037116,
              1924.055163,
              1924.542533,
              1924.560587,
            ],
            Array [
              0.24376110137729895,
              0.2925918793371093,
              0.22794688252867965,
              0.23570013675691207,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1923.3002723301759,
            "max": 0.0000651779338807184,
            "min": 0.000050777577530279214,
            "sum": 0.00022276057021262626,
            "to": 1924.8002723301759,
          },
          "quantity": 0.000379257871112242,
          "theoretical": Array [
            Array [
              1923.5502723301759,
              1924.051728993207,
              1924.5530459785252,
            ],
            Array [
              0.1878612790756839,
              0.38661211346827024,
              0.4255266074560459,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.24993693457056756,
            "min": 0.11034203594785157,
            "sum": 0.5873591220647334,
          },
          "value": 0.812138720924316,
        },
      },
      "mw": 3848.448217456969,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluNH3(+1)",
      ],
      "unsaturation": 47,
    },
    Object {
      "atoms": Object {
        "C": 170,
        "H": 290,
        "N": 43,
        "O": 55,
        "S": 1,
      },
      "charge": 1,
      "comment": "c34",
      "em": 3846.09381678794,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C170H290N43O55S(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1282.7026070375575,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1282.7026070375575,
              1283.0369114795783,
              1283.3711228031236,
            ],
            Array [
              0.1878612790756839,
              0,
              0,
            ],
          ],
          "experimental": Array [
            Array [
              1283.026992,
              1283.036819,
              1283.046647,
              1283.361189,
              1283.371021,
              1283.380852,
            ],
            Array [
              0.14622347340263128,
              0.1488677122468235,
              0.1031907112225888,
              0.19690644651706687,
              0.22644722317066823,
              0.1783644334402213,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1282.5359403708908,
            "max": 0.000052283515763886434,
            "min": 0.000023825300665429897,
            "sum": 0.00023088609801358222,
            "to": 1283.5359403708908,
          },
          "quantity": 0.0003930918740173002,
          "theoretical": Array [
            Array [
              1282.7026070375575,
              1283.0369114795783,
              1283.3711228031236,
            ],
            Array [
              0.1878612790756839,
              0.38661211346827024,
              0.4255266074560459,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.24993693457056756,
            "min": 0.11034203594785157,
            "sum": 0.5873591220647334,
          },
          "value": 0.812138720924316,
        },
      },
      "mw": 3848.448217456969,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluNH3(+1)",
      ],
      "unsaturation": 47,
    },
    Object {
      "atoms": Object {
        "C": 101,
        "H": 166,
        "N": 27,
        "O": 37,
      },
      "charge": 1,
      "comment": "z21",
      "em": 2349.19379439388,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C101H166N27O37(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1175.100261133146,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1175.100261133146,
              1175.6017116893224,
              1176.1030879955426,
            ],
            Array [
              0.08175372926898097,
              0,
              0.11365604113091032,
            ],
          ],
          "experimental": Array [
            Array [
              1175.087337,
              1175.095951,
              1175.104565,
              1175.113179,
              1175.587092,
              1175.595712,
              1175.604331,
              1175.612951,
              1176.087167,
              1176.095792,
              1176.104416,
              1176.113041,
            ],
            Array [
              0,
              0,
              0.022212083519198244,
              0.3006326768113113,
              0,
              0,
              0.0371498812246421,
              0.484467594576728,
              0,
              0,
              0.001411791744903232,
              0.15412597212321716,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1174.850261133146,
            "max": 0.00001497804283302253,
            "min": 0,
            "sum": 0.000030916500919134995,
            "to": 1176.350261133146,
          },
          "quantity": 0.00003705386260625373,
          "theoretical": Array [
            Array [
              1175.100261133146,
              1175.6017116893224,
              1176.1030879955426,
            ],
            Array [
              0.3285682848521146,
              0.4022379101488546,
              0.26919380499903073,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.33561382927806194,
            "min": 0.2246062875580845,
            "sum": 0.834366480160616,
          },
          "value": 0.8045902296001087,
        },
      },
      "mw": 2350.561459652332,
      "parts": Array [
        "N-1H-1(+1)AspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 32,
    },
    Object {
      "atoms": Object {
        "C": 138,
        "H": 235,
        "N": 34,
        "O": 44,
        "S": 1,
      },
      "charge": 1,
      "comment": "c28",
      "em": 3104.69171316015,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C138H235N34O44S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1552.8492205162809,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1552.8492205162809,
              1553.3506812950518,
              1553.8519451463785,
            ],
            Array [
              0,
              0,
              0.22512233682397886,
            ],
          ],
          "experimental": Array [
            Array [
              1552.836482,
              1552.849567,
              1552.862653,
              1553.333832,
              1553.346924,
              1553.360015,
              1553.844519,
              1553.857617,
            ],
            Array [
              0.1142079556535767,
              0.1305756308122127,
              0.10088138624230103,
              0.14651882270407857,
              0.19453421213046518,
              0.17569812658038203,
              0.06427837811166624,
              0.07330548776531746,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1552.5992205162809,
            "max": 0.00010253733743400225,
            "min": 0.00003388058930079645,
            "sum": 0.000527091539894459,
            "to": 1554.0992205162809,
          },
          "quantity": 0.0007569999621440961,
          "theoretical": Array [
            Array [
              1552.8492205162809,
              1553.3506812950518,
              1553.8519451463785,
            ],
            Array [
              0.2388239342783347,
              0.3984698630207027,
              0.3627062027009626,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.27745060000562694,
            "min": 0.1662907286360718,
            "sum": 0.6962900478905524,
          },
          "value": 0.7748776631760211,
        },
      },
      "mw": 3106.6141442178605,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaNH3(+1)",
      ],
      "unsaturation": 38,
    },
    Object {
      "atoms": Object {
        "C": 188,
        "H": 318,
        "N": 47,
        "O": 59,
        "S": 1,
      },
      "charge": 1,
      "comment": "c38",
      "em": 4210.304872186381,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C188H318N47O59S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2105.6558000293962,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2105.6558000293962,
              2106.157259524676,
              2106.6586005576064,
            ],
            Array [
              0,
              0.1043037481944373,
              0.13443670629117252,
            ],
          ],
          "experimental": Array [
            Array [
              2105.657033,
              2106.153003,
              2106.173672,
              2106.649148,
              2106.669825,
            ],
            Array [
              0.24867763152690375,
              0.24090974925308362,
              0.1894891576940471,
              0.17241297837979988,
              0.1485104831461657,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2105.4058000293962,
            "max": 0.0005041343381913079,
            "min": 0.0003010694354601159,
            "sum": 0.002027260494222485,
            "to": 2106.9058000293962,
          },
          "quantity": 0.0038152194252562234,
          "theoretical": Array [
            Array [
              2105.6558000293962,
              2106.157259524676,
              2106.6586005576064,
            ],
            Array [
              0.16645439530267664,
              0.37818543688018513,
              0.4553601678171381,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2419608352660369,
            "min": 0.08844744746605153,
            "sum": 0.5313614417043229,
          },
          "value": 0.7612595455143902,
        },
      },
      "mw": 4212.888237254821,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProNH3(+1)",
      ],
      "unsaturation": 53,
    },
    Object {
      "atoms": Object {
        "C": 88,
        "H": 154,
        "N": 21,
        "O": 24,
        "S": 1,
      },
      "charge": 1,
      "comment": "c17",
      "em": 1921.1196311005301,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C88H154N21O24S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 961.063179486471,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              961.063179486471,
              961.5646422103973,
              962.0656984762834,
            ],
            Array [
              0,
              0.005231208936801927,
              0.24068251942651026,
            ],
          ],
          "experimental": Array [
            Array [
              961.046622,
              961.052993,
              961.059364,
              961.065735,
              961.072106,
              961.078477,
              961.550123,
              961.556499,
              961.562875,
              961.569251,
              961.575627,
              961.582003,
            ],
            Array [
              0.036390534202013096,
              0.08208805116750609,
              0.14058100953303665,
              0.15177149306262566,
              0.11504763781992133,
              0.0697636239835444,
              0.04277178302015476,
              0.0863342665225027,
              0.10730657620459336,
              0.08949783045070459,
              0.059739580668135776,
              0.018707613365261604,
            ],
          ],
          "experimentalInfo": Object {
            "from": 960.813179486471,
            "max": 0.000025575557970643557,
            "min": 0.000003152486942447142,
            "sum": 0.00016851358219221237,
            "to": 962.313179486471,
          },
          "quantity": 0.00019600710468441887,
          "theoretical": Array [
            Array [
              961.063179486471,
              961.5646422103973,
              962.0656984762834,
            ],
            Array [
              0.3680195393595564,
              0.39129794121393324,
              0.24068251942651026,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.3364113657235165,
            "min": 0.20692246633053843,
            "sum": 0.8597320105489419,
          },
          "value": 0.7540862716366878,
        },
      },
      "mw": 1922.3589080674192,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValNH3(+1)",
      ],
      "unsaturation": 22,
    },
    Object {
      "atoms": Object {
        "C": 150,
        "H": 258,
        "N": 37,
        "O": 46,
        "S": 1,
      },
      "charge": 1,
      "comment": "c30",
      "em": 3345.87074015387,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C150H258N37O46S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1673.438734013141,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1673.438734013141,
              1673.9401952277096,
              1674.4414857377078,
            ],
            Array [
              0.21807215273549552,
              0,
              0.04475839940265724,
            ],
          ],
          "experimental": Array [
            Array [
              1673.929457,
              1673.944102,
              1674.4275,
              1674.442152,
              1674.456804,
            ],
            Array [
              0.2674212577290048,
              0.29428172085533816,
              0.12249746439432961,
              0.16768627123545377,
              0.14811328578587366,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1673.188734013141,
            "max": 0.000057292442838188164,
            "min": 0.00002384850461060437,
            "sum": 0.00019468570005526018,
            "to": 1674.688734013141,
          },
          "quantity": 0.0002958988529398782,
          "theoretical": Array [
            Array [
              1673.438734013141,
              1673.9401952277096,
              1674.4414857377078,
            ],
            Array [
              0.21807215273549552,
              0.3952825627121815,
              0.3866452845523231,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.26007489274348256,
            "min": 0.14347987258502093,
            "sum": 0.6579467886440815,
          },
          "value": 0.7371694478618472,
        },
      },
      "mw": 3347.94453180494,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleNH3(+1)",
      ],
      "unsaturation": 40,
    },
    Object {
      "atoms": Object {
        "C": 101,
        "H": 173,
        "N": 24,
        "O": 30,
        "S": 1,
      },
      "charge": 1,
      "comment": "c20",
      "em": 2234.24701644361,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C101H173N24O30S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1117.6268721580109,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1117.6268721580109,
              1118.128337379121,
              1118.6294749272945,
            ],
            Array [
              0,
              0.15604062176873087,
              0.10784762855580271,
            ],
          ],
          "experimental": Array [
            Array [
              1117.609813,
              1117.617802,
              1117.625792,
              1117.633782,
              1117.641772,
              1118.113323,
              1118.121318,
              1118.129313,
              1118.137308,
              1118.145303,
              1118.617174,
              1118.625174,
              1118.633175,
              1118.641175,
            ],
            Array [
              0.06960021876907145,
              0.13228678456858106,
              0.16802061173947533,
              0.1317170198899519,
              0.07367365203660202,
              0.037331836173840345,
              0.06488280759502599,
              0.073466397427566,
              0.051771043686585284,
              0.029665931517027913,
              0.02963456372073466,
              0.04459101168233741,
              0.05118477301913561,
              0.042173348174064984,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1117.3768721580109,
            "max": 0.000021667405995111825,
            "min": 0.00000382157948943065,
            "sum": 0.00012895683315751916,
            "to": 1118.8768721580109,
          },
          "quantity": 0.00015734463750359252,
          "theoretical": Array [
            Array [
              1117.6268721580109,
              1118.128337379121,
              1118.6294749272945,
            ],
            Array [
              0.3264869477851228,
              0.39808172706280187,
              0.27543132515207536,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.32626061920110067,
            "min": 0.22573855714135554,
            "sum": 0.8195820029429017,
          },
          "value": 0.7361117496754664,
        },
      },
      "mw": 2235.665888232284,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerNH3(+1)",
      ],
      "unsaturation": 27,
    },
    Object {
      "atoms": Object {
        "C": 134,
        "H": 219,
        "N": 34,
        "O": 50,
      },
      "charge": 1,
      "comment": "z28",
      "em": 3104.56392918749,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C134H219N34O50(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1552.785328529951,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1552.785328529951,
              1553.2867911456963,
              1553.788193528928,
            ],
            Array [
              0.025843077906325118,
              0,
              0.322929465783485,
            ],
          ],
          "experimental": Array [
            Array [
              1552.771059,
              1552.784144,
              1552.797228,
              1553.281469,
              1553.294559,
              1553.779033,
              1553.79213,
              1553.805227,
            ],
            Array [
              0,
              0,
              0.24694708738509755,
              0,
              0.5277410670073107,
              0,
              0,
              0.22531184560759168,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1552.535328529951,
            "max": 0.0000021633501070194685,
            "min": 0,
            "sum": 0.000004099264283689902,
            "to": 1554.035328529951,
          },
          "quantity": 0.000005649819097061566,
          "theoretical": Array [
            Array [
              1552.785328529951,
              1553.2867911456963,
              1553.788193528928,
            ],
            Array [
              0.24869449057916188,
              0.4023264826551608,
              0.3489790267656774,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2919106881826793,
            "min": 0.18044196199340787,
            "sum": 0.7255567325725354,
          },
          "value": 0.6512274563101899,
        },
      },
      "mw": 3106.37579070581,
      "parts": Array [
        "N-1H-1(+1)ThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 42,
    },
    Object {
      "atoms": Object {
        "C": 178,
        "H": 304,
        "N": 45,
        "O": 57,
        "S": 1,
      },
      "charge": 1,
      "comment": "c36",
      "em": 4016.19934448716,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C178H304N45O57S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2008.603036179786,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2008.603036179786,
              2009.104493228034,
              2009.605820840731,
            ],
            Array [
              0.17776125613715738,
              0,
              0.17180950456240646,
            ],
          ],
          "experimental": Array [
            Array [
              2009.087384,
              2009.106641,
              2009.607419,
            ],
            Array [
              0.3171995642392097,
              0.41529923219088366,
              0.2675012035699066,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2008.353036179786,
            "max": 0.000006193468985541792,
            "min": 0.000003989317290969183,
            "sum": 0.000014913268567506265,
            "to": 2009.853036179786,
          },
          "quantity": 0.000026547572169220303,
          "theoretical": Array [
            Array [
              2008.603036179786,
              2009.104493228034,
              2009.605820840731,
            ],
            Array [
              0.17776125613715738,
              0.3829280357305295,
              0.43931070813231304,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.2467856018319645,
            "min": 0.09985852328689832,
            "sum": 0.5617563998864257,
          },
          "value": 0.6504292393004362,
        },
      },
      "mw": 4018.65749145916,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleNH3(+1)",
      ],
      "unsaturation": 49,
    },
    Object {
      "atoms": Object {
        "C": 165,
        "H": 283,
        "N": 42,
        "O": 52,
        "S": 1,
      },
      "charge": 1,
      "comment": "c33",
      "em": 3717.05122369919,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C165H283N42O52S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 1859.0289757858009,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1859.0289757858009,
              1859.5304307978233,
              1860.03174038331,
            ],
            Array [
              0,
              0.12901753885011477,
              0.25077309717763613,
            ],
          ],
          "experimental": Array [
            Array [
              1859.013183,
              1859.030323,
              1859.527488,
              1859.544635,
              1860.024853,
              1860.042007,
            ],
            Array [
              0.34192353980124673,
              0.2325524532298852,
              0.1562479885893246,
              0.103771521043066,
              0.08239312351285263,
              0.08311137382362471,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1858.7789757858009,
            "max": 0.00016837390158025488,
            "min": 0.00004057296457946956,
            "sum": 0.0004924314414799497,
            "to": 1860.2789757858009,
          },
          "quantity": 0.0008137198530557404,
          "theoretical": Array [
            Array [
              1859.0289757858009,
              1859.5304307978233,
              1860.03174038331,
            ],
            Array [
              0.19468535700338113,
              0.38903704848250537,
              0.41627759451411345,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.25191492520749525,
            "min": 0.11781596654450371,
            "sum": 0.6051609035108767,
          },
          "value": 0.6202093639722491,
        },
      },
      "mw": 3719.334034710502,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysNH3(+1)",
      ],
      "unsaturation": 45,
    },
    Object {
      "atoms": Object {
        "C": 192,
        "H": 323,
        "N": 48,
        "O": 62,
        "S": 1,
      },
      "charge": 1,
      "comment": "c39",
      "em": 4325.33181521067,
      "ionization": Object {
        "charge": 1,
        "em": 1.00782503223,
        "mf": "H1(1+)",
      },
      "mf": "C192H323N48O62S(+1)",
      "ms": Object {
        "charge": 2,
        "em": 2163.169271541541,
        "ionization": "H1(1+)",
        "similarity": Object {
          "difference": Array [
            Array [
              2163.169271541541,
              2163.6707312035787,
              2164.1720755241245,
            ],
            Array [
              0,
              0.37587982216593047,
              0.023306339908043178,
            ],
          ],
          "experimental": Array [
            Array [
              2163.152943,
              2163.174457,
              2164.164445,
              2164.185974,
            ],
            Array [
              0.19151186115415691,
              0.22433717759143962,
              0.24124220668322685,
              0.3429087545711764,
            ],
          ],
          "experimentalInfo": Object {
            "from": 2162.919271541541,
            "max": 0.00004284463070823665,
            "min": 0.000023928391614434,
            "sum": 0.00012494469778648808,
            "to": 2164.419271541541,
          },
          "quantity": 0.00024163785417107204,
          "theoretical": Array [
            Array [
              2163.169271541541,
              2163.6707312035787,
              2164.1720755241245,
            ],
            Array [
              0.16197245706039343,
              0.37587982216593047,
              0.46214772077367594,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.23896465850876597,
            "min": 0.08375177708215446,
            "sum": 0.517074190279935,
          },
          "value": 0.6008138379260264,
        },
      },
      "mw": 4327.975802596442,
      "parts": Array [
        "HMetGlnIlePheValLysThrLeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspNH3(+1)",
      ],
      "unsaturation": 55,
    },
    Object {
      "atoms": Object {
        "C": 43,
        "H": 68,
        "N": 11,
        "O": 16,
      },
      "charge": 1,
      "comment": "z9",
      "em": 994.4845501534899,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C43H68N11O16(+1)",
      "ms": Object {
        "charge": 3,
        "em": 332.1661848260742,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              332.16618482607424,
              332.500491421847,
              332.83468945276445,
            ],
            Array [
              0,
              0.30825650923584536,
              0.09800429441440131,
            ],
          ],
          "experimental": Array [
            Array [
              332.148736,
              332.15003,
              332.151324,
              332.152619,
              332.153913,
              332.155208,
              332.156502,
              332.157797,
              332.159091,
              332.160386,
              332.16168,
              332.162975,
            ],
            Array [
              0,
              0,
              0.1268567095199702,
              0.20877353738507232,
              0.2534428573047885,
              0.2359122426569841,
              0.16129420048023596,
              0.013720452652948814,
              0,
              0,
              0,
              0,
            ],
          ],
          "experimentalInfo": Object {
            "from": 331.9995181594075,
            "max": 0.0000028537218940533105,
            "min": 0,
            "sum": 0.000011259823710957638,
            "to": 332.9995181594075,
          },
          "quantity": 0.000011581000862751798,
          "theoretical": Array [
            Array [
              332.16618482607424,
              332.500491421847,
              332.83468945276445,
            ],
            Array [
              0.5937391963497535,
              0.30825650923584536,
              0.09800429441440131,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.577272962882359,
            "min": 0.0952863306980827,
            "sum": 0.9722668916442991,
          },
          "value": 0.5937391963497534,
        },
      },
      "mw": 995.0658289504048,
      "parts": Array [
        "N-1H-1(+1)LysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 15,
    },
    Object {
      "atoms": Object {
        "C": 47,
        "H": 73,
        "N": 12,
        "O": 19,
      },
      "charge": 1,
      "comment": "z10",
      "em": 1109.51149317778,
      "ionization": Object {
        "charge": 3,
        "em": 3.02347509669,
        "mf": "H3(3+)",
      },
      "mf": "C47H73N12O19(+1)",
      "ms": Object {
        "charge": 4,
        "em": 278.1331934887084,
        "ionization": "H3(3+)",
        "similarity": Object {
          "difference": Array [
            Array [
              278.1331934887084,
              278.38392375924536,
              278.6345732243336,
            ],
            Array [
              0,
              0.3216644914990094,
              0.11183763895486896,
            ],
          ],
          "experimental": Array [
            Array [
              278.131188,
              278.13218,
              278.133172,
              278.134164,
              278.135156,
              278.136148,
              278.13714,
              278.138132,
              278.139124,
              278.140116,
              278.141107,
              278.142099,
              278.143091,
              278.144083,
            ],
            Array [
              0,
              0,
              0,
              0,
              0.1210371362959009,
              0.22123421678985658,
              0.2685390536587102,
              0.23444938353054268,
              0.14600194382454837,
              0.008738265900441253,
              0,
              0,
              0,
              0,
            ],
          ],
          "experimentalInfo": Object {
            "from": 278.0081934887084,
            "max": 0.0000011242265152226023,
            "min": 0,
            "sum": 0.000004186454446403897,
            "to": 278.7581934887084,
          },
          "quantity": 0.000004338650896106139,
          "theoretical": Array [
            Array [
              278.1331934887084,
              278.38392375924536,
              278.6345732243336,
            ],
            Array [
              0.5664978695461217,
              0.3216644914990094,
              0.11183763895486896,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.5466255713194578,
            "min": 0.10791446283408715,
            "sum": 0.9649207891239104,
          },
          "value": 0.5664978695461216,
        },
      },
      "mw": 1110.1533942920253,
      "parts": Array [
        "N-1H-1(+1)AspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 17,
    },
    Object {
      "atoms": Object {
        "C": 162,
        "H": 270,
        "N": 41,
        "O": 58,
      },
      "charge": 1,
      "comment": "z34",
      "em": 3717.9438408187902,
      "ionization": Object {
        "charge": 2,
        "em": 2.01565006446,
        "mf": "H2(2+)",
      },
      "mf": "C162H270N41O58(+1)",
      "ms": Object {
        "charge": 3,
        "em": 1239.9859483811742,
        "ionization": "H2(2+)",
        "similarity": Object {
          "difference": Array [
            Array [
              1239.9859483811742,
              1240.3202573139126,
              1240.654533807653,
            ],
            Array [
              0.20097735619747478,
              0,
              0.2766980214279142,
            ],
          ],
          "experimental": Array [
            Array [
              1240.303989,
              1240.31333,
              1240.322671,
              1240.332012,
              1240.640322,
              1240.649666,
              1240.659011,
              1240.668355,
            ],
            Array [
              0,
              0,
              0,
              0.8706022797176701,
              0,
              0,
              0,
              0.1293977202823298,
            ],
          ],
          "experimentalInfo": Object {
            "from": 1239.8192817145075,
            "max": 0.000008496887075660357,
            "min": 0,
            "sum": 0.00000975978041134447,
            "to": 1240.8192817145075,
          },
          "quantity": 0.000015457940651978365,
          "theoretical": Array [
            Array [
              1239.9859483811742,
              1240.3202573139126,
              1240.654533807653,
            ],
            Array [
              0.20097735619747478,
              0.3929269020922812,
              0.40609574171024404,
            ],
          ],
          "thereoticalInfo": Object {
            "max": 0.25639930662864796,
            "min": 0.12689237902390801,
            "sum": 0.6313764964607609,
          },
          "value": 0.522324622374611,
        },
      },
      "mw": 3720.1235361459076,
      "parts": Array [
        "N-1H-1(+1)LeuThrGlyLysThrIleThrLeuGluValGluProSerAspThrIleGluAsnValLysAlaLysIleGlnAspLysGluGlyIleProProAspGlnGlnOH",
      ],
      "unsaturation": 48,
    },
  ],
}
`;
